run the formatter